fix: log item style align

--- a/src/app/components/log-item/log-item.component.scss
+++ b/src/app/components/log-item/log-item.component.scss
@@ -1,6 +1,7 @@
 .log-item {
   height: 100%;
-  display: flex;
+  display: grid;
+  grid-template-columns: 160px auto 76px;
   flex-direction: row;
   align-items: center;
   font-family: monospace;
